--- a/src/app/components/carts/carts.component.html
+++ b/src/app/components/carts/carts.component.html
@@ -23,7 +23,7 @@
                             <td style="width: 25%;">{{item.description}}</td>
                             <th style="width: 12%;">{{item.price |currency:'INR':true}}</th>
                             <td style="width: 12%;">{{item.quantity}}</td>
-                            <td style="width: 12%;">{{item.total}}</td>
+                            <td style="width: 12%;">{{item.total |currency:'INR':true}}</td>
                             <td>
                                 <button (click)="removeItem(item)" class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
                             </td>
